apps/identity/service.yml
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: quizup-prod
  labels:
    app: identity
spec:
  selector:
    app: identity
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
