apps/identity/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quizup-identity
  namespace: quizup-prod
spec:
  rules:
    - host: identity.quizup.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity
                port:
                  number: 80
